package gate;

option java_package = "hc.gate";
option java_outer_classname = "S2GConnect";

message S2GReq {
  required int32 serverID = 1;
  required int32 serverType = 2;
}

message S2GRsp {
  required bool result = 1;
}

message Ping{
	required int32 result = 1;
}